<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="contactUs">کانال‌های رونویس:</string>
    <string name="meTelegram">تلگرام من</string>
    <string name="meInsta">اینستاگرام من</string>
    <string name="meAparat">آپارات من</string>
    <string name="btnaddtext">متن جدید</string>
    <string name="btnedittext">ویرایش متن</string>
    <string name="btntextalign">چینش</string>
    <string name="btntextshadow">سایه</string>
    <string name="btntextfont">فونت</string>
    <string name="btntextLock">قفل</string>
    <string name="btntextduplicate">همانند‌ساز</string>
    <string name="usercolor">رنگ پیشرفته</string>
    <string name="userColorPallete">رنگ متن</string>
    <string name="textColorBackGround">پس زمینه</string>
    <string name="btntextbold">ضخیم</string>
    <string name="btntextitalic">مورب</string>
    <string name="btntextstrikethrough">خط وسط</string>
    <string name="btntextunderline">خط زیر</string>
    <string name="btnrotation">چرخش</string>
    <string name="btnarrows">جابه‌جایی</string>
    <string name="btndeltxt">حذف متن</string>
    <string name="btnSize">اندازه متن</string>
    <string name="btnCrop">اندازه جعبه</string>
    <string name="btnOpacity">شفافیت</string>
    <string name="btnGradient">سایه روشن</string>
    <string name="btnStroke">حاشیه</string>
    <string name="btnTexture">بافت</string>
    <string name="btnLinespacing">فاصله خطوط</string>
    <string name="imgviewselect">عکس از گالری</string>
    <string name="imgbgDialog">عکس از آرشیو</string>
    <string name="imgbgRefresh">بازسازی</string>
    <string name="btndelbg">حذف پس‌زمینه</string>
    <string name="btnBGCrop">اندازه صفحه</string>
    <string name="btnBGImageCrop">برش تصویر</string>
    <string name="btnBgOpacity">شفافیت</string>
    <string name="btnBgBlur">محو کردن</string>
    <string name="userbgcolor">رنگ پس‌زمینه</string>
    <string name="imglogoselect">استیکر از گالری</string>
    <string name="imgdelST">حذف استیکر</string>
    <string name="imgStickerDialog">استیکر از آرشیو</string>
    <string name="btnimageduplicate">همانند ساز</string>
    <string name="btnOpacityLogo">شفافیت</string>
    <string name="btnRotationLogo">چرخش</string>
    <string name="btnLogoExpand">اندازه استیکر</string>
    <string name="STATUS_NOT_DOWNLOAD">دانلود نشده</string>
    <string name="STATUS_CONNECTING">داره وصل میشه</string>
    <string name="STATUS_CONNECTED">وصل شده</string>
    <string name="STATUS_CONNECT_ERROR">اتصالش مشکل داره</string>
    <string name="STATUS_DOWNLOADING">در حال دانلود</string>
    <string name="STATUS_DOWNLOAD_INIT">راه اندازی</string>
    <string name="STATUS_DOWNLOAD_COMPLETE">تکمیل شده</string>
    <string name="STATUS_DOWNLOAD_CANCELED">دانلود لغو شده</string>
    <string name="STATUS_DOWNLOAD_FAILED">خطا در دانلود</string>
    <string name="STATUS_PAUSED">متوقف شده</string>
    <string name="STATUS_DOWNLOAD_ERROR">خطا در دانلود</string>
    <string name="STATUS_COMPLETE">تکمیل شده</string>
    <string name="STATUS_RETRY">سعی مجدد</string>
    <string name="STATUS_INSTALLING">در حال نصب</string>
    <string name="STATUS_INSTALLED">نصب شده</string>
    <string name="STATUS_INSTALL_ERROR">خطا در نصب</string>
    <string name="STATUS_FINISHED">اتمام</string>
    <string name="STATUS_SD_NOSPACE">کارت حافظه جا نداره</string>
    <string name="STATUS_DELETE">حذف</string>
    <string name="STATUS_DELETEED">حذف</string>
    <string name="STATUS_DELETEING">در حال حذف</string>
    <string name="STATUS_B_NOT_DOWNLOAD">دانلود</string>
    <string name="STATUS_B_CONNECTING">انصراف</string>
    <string name="STATUS_B_CONNECT_ERROR">سعی دوباره</string>
    <string name="STATUS_B_DOWNLOADING">توقف</string>
    <string name="STATUS_B_PAUSED">ادامه</string>
    <string name="STATUS_B_DOWNLOAD_ERROR">سعی دوباره</string>
    <string name="STATUS_B_COMPLETE">نصب</string>
    <string name="STATUS_B_INSTALLED">حذف</string>
    <string name="STATUS_BACKPRESS">تا پایان دانلود صبر کنید</string>
    <string name="i_1_h">سلام دوستم :)</string>
    <string name="i_1_m">من رونویسم و الان میخوام یکم در مورد خودم برات بگم</string>
    <string name="t_h_1">ابزارهای رونویسی</string>
    <string name="t_h_2">نوشتن متن</string>
    <string name="t_h_3">صفحه نوشتن متن</string>
    <string name="t_h_4">ویرایش متن</string>
    <string name="t_h_5">همانند ساز</string>
    <string name="t_h_6">انتخاب فونت</string>
    <string name="t_h_7">سایه</string>
    <string name="t_h_8">قفل</string>
    <string name="t_h_9">انتخاب رنگ هوشمند</string>
    <string name="t_h_10">اسلایدر + عدد</string>
    <string name="t_m_1">خوب تو بخش اول میریم سراغ آموزش ابزارهای رونویسی مثل نوشتن متن و رنگ و سایه…</string>
    <string name="t_m_2">از این آیکون برای نوشتن متن جدید استفاده کن</string>
    <string name="t_m_3">وقتی روی اون آیکون + کلیک میکنی یه صفحه باز میشه و میتونی هر متنیو اینجا بنویسی. دقت کن که اگر به انتهای خط رسیدی از Enter استفاده کن تا بری خط بعدی :)</string>
    <string name="t_m_4">وقتی یه متنی مینویسی و بعد که نظرت عوض شد و میخوای تغییرش بدی رو این آیکون کلیک کن و یادت باشه که این ابزار فقط برای ویرایش متن ها و کلمات نوشته شده هستش نه نوشتن متن جدید</string>
    <string name="t_m_5">از هر چیزی که نوشتی وقتی روی این آیکون بزنی همونجا برات یه کپی ازش میگیره. فراموش نکن این ابزار دقیقا همونجایی کپی میسازه که متن فعلیت هست :) جلوتر که کار کنی متوجه میشی که چقدر خوبه این :-p</string>
    <string name="t_m_6">وقتی متنی مینویسی و میخوای فونتشو عوض کنی، اون متنی که میخواین فونتشو عوض کنی انتخاب کن و بعد روی این آیکون کلیک کن. این ابزار کاملا هوشمند هستش و برای اولین بار در دنیا متنیو که انتخاب کردی در فونت های مختلف پیش نمایش میده ;)</string>
    <string name="t_m_7">از این ابزار میتونی برای سایه دادن به متنت استفاده کنی</string>
    <string name="t_m_8">وقتی متنتو قفل کنی دیگه نمیتونی با انگشت جا به جاش کنی اینجوری نگران نیستی که یه چیزی ناخواسته جا به جا بشه</string>
    <string name="t_m_9">این ابزار دوتا کار انجام میده یکی انتخاب رنگ سریع و یکی بعد از انتخاب عکس پس زمینه، یه متن باید بنویسی و بعدش پالت رنگو کلیک کنی، حالا بهترین و مناسب ترین رنگ ها متناسب با پس زمینه، به شما پیشنهاد میشه</string>
    <string name="t_m_10">یه قابلیت سالهاست تو رونویس هست ولی چون بهش اشاره نکردم کسی ازش استفاده نکرده بود تا الان :D از نسخه دوم به بعد این قابلیت اضافه شده، خودتون روی آیکون کنار اسلایدرها کلیک کنید تا…</string>
    <string name="b_h_1">ابزارهای پس زمینه</string>
    <string name="b_h_2">عکس های گالریتون</string>
    <string name="b_h_3">گالری رونویس</string>
    <string name="b_h_4">تازه سازی</string>
    <string name="b_h_5">اندازه ثابت</string>
    <string name="b_m_1">یه سری امکانات مهم برای انتخاب و ویرایش پس زمینه دارم و یکم ازشون میگم</string>
    <string name="b_m_2">خوب خیلی از ماها دوست داریم از عکسهای گالریمون برای پس زمینه استفاده کنیم، روی این ابزار کلیک کن و عکس مورد نظر خودتو انتخاب کن :)</string>
    <string name="b_m_3">من کلی عکس تو دسته بندی های گوناگون دارم،بابام این عکسهارو بصورت ماهانه بروزرسانی میکنه و کلی عکس جدید میتونی دانلود کنی و برای همیشه داشته باشی، یکبار دانلود کن یک عمر داشته باش</string>
    <string name="b_m_4">وقتی تصویر جدیدی وارد میکنی و میخوای قالبت تنظیم بشه برای اون عکس، روی این ابزار کلیک کن</string>
    <string name="b_m_5">با انتخاب یه اندازه ثابت و وارد کردن عددش میتونی یه صفحه ثابت بسازی که هیچوقت اندازش تغییر نمیکنه</string>
    <string name="m_h_1">ابزار ذخیره سازی</string>
    <string name="m_h_2">استیکر و…</string>
    <string name="m_m_1">حالا دیگه میتونی پروژه خودتو ذخیره کنی و هر وقت خواستی دوباره روش کار کنی یا تغییرش بدی یا یه قالب برای خودت بسازی و همیشه داشته باشی</string>
    <string name="m_m_2">وقتی روی ابزار اشتراک گذاری کلیک کنی، میتونی بصورت مستقیم برای تلگرام استیکر بفرستی :)) این ابزار خوبی برای هنرنمایی و درآمدزایی هستش و حسابی ازش استفاده کن</string>
    <string name="a_h_1">نکات مهم</string>
    <string name="a_h_2">دسترسی به…</string>
    <string name="a_b_2">تنظیم دسترسی</string>
    <string name="a_e_2">یادت رفت دسترسی بدی</string>
    <string name="a_h_3"> <b>\"توجه\"</b> معرفی ویترین</string>
    <string name="a_h_4">توافق نهایی</string>
    <string name="a_m_1">یه چندتا نکته کوچیکو بررسی کنیم و بریم که دنیا منتظر هنر شماست</string>
    <string name="a_m_2">اگر اندروید 6 به بالا داری لازمه اجازه بدی به کارت حافظه و اینترنت دسترسی داشته باشم</string>
    <string name="a_m_3">برای استفاده از فونت، پس‌زمینه و استیکر باید اونهارو از ویترین دانلود کنی و برای مناسبت‌های که رخ میده بسته‌های جدیدی برات میفرستم</string>
    <string name="a_m_4">نمیخوام بگم قانونی یا شرعی ولی بدون خیلی بی&#xA0;معرفتیه که منو به دوستت مجانی بفرستی، فکر میکنی اگر رایگان منو بفرستی و یا رایگان استفاده کنی نسخه های بعدیم آماده میشه؟ قول&#xA0;میدی با معرفت باشی؟</string>
    <string name="a_chk_e_1">ازت ممنونم و رو معرفتت حساب میکنم.</string>
    <string name="a_chk_e_2">من با معرفتم.</string>
    <string name="Download">دانلود</string>
    <string name="Error">خطا</string>
    <string name="Complete">تکمیل شده</string>
    <string name="title_activity_app_detail">اطلاعات فایل</string>
    <string name="tf_selected_Path">fonts/</string>
    <string name="IR_UltraLight_Fa">"self/IRANSansMobile_Fa_UltraLight.ttf"</string>
    <string name="IR_Light_Fa">"self/IRANSansMobile_Fa_Light.ttf"</string>
    <string name="IR_Regular_Fa">"self/IRANSansMobile_Fa.ttf"</string>
    <string name="IR_Medium_Fa">"self/IRANSansMobile_Fa_Medium.ttf"</string>
    <string name="IR_Bold_Fa">"self/IRANSansMobile_Fa_Bold.ttf"</string>
    <string name="IR_Icons">"self/icons.ttf"</string>
    <string name="ronevisPathFolder">"ronevis"</string>
    <string name="ronevisPathBackGrounds">"ronevis/.Backs"</string>
    <string name="ronevisPathTemp">"ronevis/.temp"</string>
    <string name="ronevisPathBackGroundsImg">"ronevis/.Backs/.img"</string>
    <string name="ronevisPathBackGroundsTmb">"ronevis/.Backs/.tmb"</string>
    <string name="ronevisPathStickers">"ronevis/.Stickers"</string>
    <string name="ronevisPathTexture">"ronevis/.Texture"</string>
    <string name="ronevisPathFonts">"ronevis/.Fonts"</string>
    <string name="ronevisPathFontsFa">"ronevis/.Fonts/.fa"</string>
    <string name="ronevisPathFontsEn">"ronevis/.Fonts/.en"</string>
    <string name="btn_Skip">انتها</string>
    <string name="daTitle">یه متن بنویس</string>
    <string name="daPositiveButton">بنویسش</string>
    <string name="daNegativeButton">نمیخوامش</string>
    <string name="dsFileFormatPNG">عکس</string>
    <string name="dsFileFormatWEBP">استیکر</string>
    <string name="dsFileFormatProj">پروژه</string>
    <string name="dsBtnNew">صفحه جدید</string>
    <string name="dsBtnShare">اشتراک گذاری</string>
    <string name="dsBtnEdit">ویرایش مجدد</string>
    <string name="dsSaved">تصویر ذخیره شد</string>
    <string name="daaVersion">نسخه:</string>
    <string name="daaMe">بابای من:</string>
    <string name="daaMeName">محمد تقی کریمی</string>
    <string name="menunew">جدید</string>
    <string name="menuOpenFile">بازکردن پروژه</string>
    <string name="menushare">ذخیره و اشتراک</string>
    <string name="menuabout">درباره</string>
    <string name="menushop">ویترین</string>
    <string name="menutrain">راهنمای من</string>
    <string name="Icon_check">&#xf12c;</string>
    <string name="Icon_window_close">&#xf5ad;</string>
    <string name="Icon_video">&#xf567;</string>
    <string name="Icon_emoticon_happy">&#xf1f5;</string>
    <string name="Icon_keyboard_backspace">&#xf30d;</string>
    <string name="Icon_arrow_left_outline">&#xf050;</string>
    <string name="Icon_arrow_right_outline">&#xf057;</string>
    <string name="Icon_file_image">&#xf21f;</string>
    <string name="Icon_file">&#xf214;</string>
    <string name="Icon_instagram">&#xf2fe;</string>
    <string name="Icon_linkedin_box">&#xf33c;</string>
    <string name="Icon_new_box">&#xf394;</string>
    <string name="Icon_share_variant">&#xf497;</string>
    <string name="Icon_telegram">&#xf501;</string>
    <string name="Icon_email">&#xf1ee;</string>
</resources>