<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="none"
        android:orderInCategory="1">
        <item
            android:id="@+id/menunew"
            android:checkable="false"
            android:orderInCategory="2"
            android:title="@string/menunew"
            app:showAsAction="ifRoom"
            />
        <!--<item-->
            <!--android:id="@+id/menusaveFile"-->
            <!--android:orderInCategory="3"-->
            <!--android:title="@string/menusaveFile"-->
            <!--app:showAsAction="never"/>-->
        <item
            android:id="@+id/menuOpenFile"
            android:orderInCategory="4"
            android:title="@string/menuOpenFile"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menuabout"
            android:orderInCategory="6"
            android:title="@string/menuabout"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menutrain"
            android:orderInCategory="7"
            android:title="@string/menutrain"
            app:showAsAction="never"/>
    </group>
    <group
        android:checkableBehavior="none"
        android:orderInCategory="2">
        <item
            android:id="@+id/menushare"
            android:orderInCategory="6"
            android:title="@string/menushare"
            app:showAsAction="always"/>
        <!--<item-->
        <!--android:id="@+id/menusave"-->
        <!--android:orderInCategory="7"-->
        <!--android:title="@string/menusave"-->
        <!--app:showAsAction="always"/>-->
        <item
            android:id="@+id/menushop"
            android:orderInCategory="7"
            android:title="@string/menushop"
            app:showAsAction="always"/>
    </group>
</menu>
