<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:background="@color/bg_dark"
                xmlns:my_app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:id="@+id/savedImageBlur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:drawingCacheQuality="low"/>
    <RelativeLayout
        android:id="@+id/savedParentPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/savedTopPanel"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/savedTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="?attr/dialogPreferredPadding"
                android:paddingRight="?attr/dialogPreferredPadding"
                android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal">
                <!--<ImageView-->
                <!--android:id="@+id/savedTitleIcon"-->
                <!--style="@style/RtlOverlay.Widget.AppCompat.DialogTitle.Icon"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:scaleType="centerInside"/>-->
                <TextView
                    android:id="@+id/savedTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textColor="@color/text_primary_light"
                    android:text="@string/dsSaved"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/savedSocialButtonPanel"
            android:layout_below="@+id/savedTopPanel"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="1"
            android:background="@null">
            <ImageView
                android:id="@+id/savedBodyImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:drawingCacheQuality="low"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/savedSocialButtonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/savedButtonPanel"
            android:orientation="horizontal"
            android:weightSum="3"
            android:background="#80000000">
            <fragments.views.TextButton
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                xmlns:my_app="http://schemas.android.com/apk/res-auto"
                my_app:text_caption="@string/meAparat"
                my_app:text_icon="@string/Icon_video"/>
            <fragments.views.TextButton
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                xmlns:my_app="http://schemas.android.com/apk/res-auto"
                my_app:text_caption="@string/meInsta"
                my_app:text_icon="@string/Icon_instagram"/>
            <fragments.views.TextButton
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                xmlns:my_app="http://schemas.android.com/apk/res-auto"
                my_app:text_caption="@string/meTelegram"
                my_app:text_icon="@string/Icon_telegram"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/savedButtonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="3"
            android:background="#af000000">
            <fragments.views.TextButton
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                my_app:text_caption="@string/dsBtnEdit"
                my_app:text_icon="@string/Icon_keyboard_backspace"/>
            <fragments.views.TextButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                my_app:text_caption="@string/dsBtnShare"
                my_app:text_icon="@string/Icon_share_variant"/>
            <fragments.views.TextButton
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                my_app:text_caption="@string/dsBtnNew"
                my_app:text_icon="@string/Icon_new_box"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
