<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:my_app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002dac82">

    <com.google.android.material.textfield.TextInputEditText
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/edaddtext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/savedButtonPanel"
        android:layout_centerVertical="true"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/daTitle"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textSize="24sp"/>


    <LinearLayout
        android:id="@+id/savedButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#af000000">

        <fragments.views.TextButton
            android:id="@+id/dButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            my_app:text_caption="@string/daNegativeButton"
            my_app:text_icon="@string/Icon_window_close"/>
        <fragments.views.TextButton
            android:id="@+id/dButton1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            my_app:text_caption="@string/daPositiveButton"
            my_app:text_icon="@string/Icon_check"/>
    </LinearLayout>

</RelativeLayout>
