<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="@dimen/padding_large"
              android:paddingBottom="@dimen/padding_large"
              android:orientation="vertical"
              android:background="@null"
              xmlns:autofit="http://schemas.android.com/apk/res-auto"
              android:baselineAligned="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_large"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="7"
        android:background="@null"
        >
        <!--<fragments.views.TextIcon-->
            <!--android:id="@+id/Icon_phone_in_talk"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:background="@null"-->
            <!--android:button="@null"-->
            <!--android:maxLines="1"-->
            <!--android:textSize="30sp"-->
            <!--autofit:isradio="false"-->
            <!--android:textColor="@color/text_secondary_light"-->
            <!--android:text="@string/Icon_phone_in_talk"/>-->
        <fragments.views.TextIcon
            android:id="@+id/Icon_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@null"
            android:button="@null"
            android:maxLines="1"
            android:textSize="30sp"
            autofit:isradio="false"
            android:textColor="@color/text_secondary_light"
            android:text="@string/Icon_email"
            />
        <fragments.views.TextIcon
            android:id="@+id/Icon_linkedin_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@null"
            android:button="@null"
            android:maxLines="1"
            android:textSize="30sp"
            autofit:isradio="false"
            android:textColor="@color/text_secondary_light"
            android:text="@string/Icon_linkedin_box"
            />
        <fragments.views.TextIcon
            android:id="@+id/Icon_instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@null"
            android:button="@null"
            android:maxLines="1"
            android:textSize="30sp"
            autofit:isradio="false"
            android:textColor="@color/text_secondary_light"
            android:text="@string/Icon_instagram"
            />
        <fragments.views.TextIcon
            android:id="@+id/Icon_telegram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@null"
            android:button="@null"
            android:maxLines="1"
            android:textSize="30sp"
            autofit:isradio="false"
            android:textColor="@color/text_secondary_light"
            android:text="@string/Icon_telegram"
            />
    </LinearLayout>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="0dp"
                 android:paddingStart="0dp"
                 android:paddingEnd="@dimen/dialogs_padding_around_content_area"
                 android:paddingRight="@dimen/dialogs_padding_around_content_area"
                 android:background="@null">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:background="@null">
            <TextView
                android:id="@+id/appversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_column="2"
                android:textColor="@color/text_primary_light"/>
            <TextView
                android:id="@+id/appversionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_large"
                android:background="@null"
                android:layout_column="1"
                android:textSize="16sp"
                android:textColor="@color/text_secondary_light"
                android:text="@string/daaVersion"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:background="@null">
            <TextView
                android:id="@+id/appabout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_column="2"
                android:textColor="@color/text_primary_light"
                android:text="@string/daaMeName"/>
            <TextView
                android:id="@+id/appaboutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_large"
                android:gravity="end"
                android:background="@null"
                android:layout_column="1"
                android:textSize="16sp"
                android:textColor="@color/text_secondary_light"
                android:text="@string/daaMe"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
