<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_layout"
        android:background="@null"/>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/btn_Skip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_Skip"
                android:textColor="@color/text_secondary_light"
                android:textSize="16sp"/>

            <fragments.views.TextIcon
                android:id="@+id/btnLeftArrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/Icon_arrow_left_outline"
                android:textColor="@color/text_secondary_light"
                android:textSize="30sp"
                autofit:isradio="false"/>

            <fragments.views.UnderlinePageIndicator
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/titles"
                android:layout_width="0dp"
                android:layout_height="6dp"
                android:layout_weight="5"
                android:background="@color/md_grey_800"
                app:fadeDelay="500"
                app:fadeLength="500"
                app:selectedColor="@color/divider"/>

            <fragments.views.TextIcon
                android:id="@+id/btnRightArrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/Icon_arrow_right_outline"
                android:textColor="@color/text_secondary_light"
                android:textSize="30sp"
                android:visibility="invisible"
                autofit:isradio="false"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
